<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6" >

    <RelativeLayout 
        android:id="@+id/login_top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="@drawable/common_title_bg" >

        <Button
            android:id="@+id/login_setconnectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
			android:layout_marginBottom="5dp"
            android:layout_marginRight="18px"
            android:background="@drawable/common_title_button_setconnection" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/login_setconnectionBtn"
            android:layout_alignBottom="@+id/login_setconnectionBtn"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

    <EditText 
        android:id="@+id/login_usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_top_panel"
        android:paddingLeft="66px"
        android:singleLine="true"
     	android:hint="@string/username"
        android:layout_marginTop="30px"
        android:textSize="24px"
     	android:background="@drawable/login_name_bg" />

    <EditText 
        android:id="@+id/login_passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_usernameEditText"
        android:layout_alignLeft="@id/login_usernameEditText"
        android:layout_alignRight="@id/login_usernameEditText"
        android:paddingLeft="66px"
        android:singleLine="true"
     	android:hint="@string/password"
        android:password="true"
        android:textSize="24px"
     	android:background="@drawable/login_pass_bg" />
    
    <TextView
        android:id="@+id/login_accountset_selectTextView"
        android:layout_width="642px"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_loginBtn"
        android:layout_alignRight="@+id/login_loginBtn"
        android:layout_below="@id/login_passwordEditText"
        android:layout_marginTop="20px"
        android:background="@drawable/login_accountset_button_enable_bg_up"
        android:gravity="center"
        android:paddingLeft="90px"
        android:paddingRight="10px"
        android:singleLine="true"
        android:text="@string/selectEnterprice"
        android:textSize="24px" />
    
    <Button
        android:id="@+id/login_loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_accountset_selectTextView"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_button"
        android:gravity="center"
        android:padding="@dimen/commonPadding"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="40px" />

    <TextView
        android:id="@+id/login_errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_accountset_selectTextView"
        android:layout_alignLeft="@id/login_accountset_selectTextView"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="8px"
        android:text="@string/caution"
        android:textColor="#FF0000"
        android:textSize="28px" />

    <CheckBox
        android:id="@+id/login_autoLogin_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_accountset_selectTextView"
        android:layout_alignRight="@id/login_accountset_selectTextView"
        android:layout_marginRight="8px"
        android:text="@string/autoLogin"
        android:textSize="28px" />
        
</RelativeLayout>
